Revision history for Thread-CSP

{{$NEXT}}

0.010     2023-05-09 15:08:24+02:00 Europe/Amsterdam
          - Rename Thread::Csp to Thread::CSP

0.009     2022-08-23 12:43:58+02:00 Europe/Amsterdam
          - Allow for passing of threads::shared values

0.008     2022-02-24 17:08:54+01:00 Europe/Amsterdam
          - Revert using socketpair
          - Use PerlProc_pipe instead of pipe

0.007     2022-02-22 15:08:28+01:00 Europe/Amsterdam
          - Use socketpair when pipe is not available
          - Rename notifier methods

0.006     2022-02-19 19:05:31+01:00 Europe/Amsterdam
          - Replace set_notify with get_notifier
          - Split Channel notifier into read and write

0.005     2022-01-07 14:46:45+01:00 Europe/Amsterdam
          - Improve compatibility with older perl versions

0.004     2022-01-04 18:44:16+01:00 Europe/Amsterdam
          - Fix allocation of mthread
          - Add atomics support for Visual C++
          - Fix return type of run_thread on Windows

0.003     2021-12-30 10:34:27+01:00 Europe/Amsterdam
          - Use stdc malloc instead of PerlMemShared
          - Define CX_LEAVE_SCOPE when not available

0.002     2021-12-29 16:19:49+01:00 Europe/Amsterdam
          - Various documentation fixes

0.001     2021-12-29 15:20:44+01:00 Europe/Amsterdam
          Initial release to an unsuspecting world