@@ -1,7 +1,8 @@
 struct channel;
 typedef struct channel Channel;
 
-Channel* channel_alloc(UV);
+Channel* S_channel_alloc(pTHX_ UV);
+#define channel_alloc(refcount) S_channel_alloc(aTHX_ refcount)
 void channel_send(Channel* channel, SV* message);
 SV* S_channel_receive(pTHX_ Channel* channel);
 #define channel_receive(channel) S_channel_receive(aTHX_ channel)
@@ -11,7 +12,8 @@ SV* S_channel_send_ready_fh(pTHX_ Channel*);
 #define channel_send_ready_fh(channel) S_channel_send_ready_fh(aTHX_ channel)
 void channel_close(Channel*);
 
-void channel_refcount_dec(Channel* channel);
+void S_channel_refcount_dec(pTHX_ Channel* channel);
+#define channel_refcount_dec(channel) S_channel_refcount_dec(aTHX_ channel)
 
 SV* S_channel_to_sv(pTHX_ Channel* channel, SV* stash_name);
 #define channel_to_sv(channel, stash_name) S_channel_to_sv(aTHX_ channel, stash_name)
